base/tools/kong/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    istio.io/dataplane-mode: ambient
