base/tools/kong/manifests/kong-gateway-metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-gateway-metrics
  namespace: kong
  labels:
    app: kong-gateway-metrics
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: kong
    app.kubernetes.io/name: gateway
  ports:
    - name: metrics
      port: 8100
      targetPort: 8100
      protocol: TCP
