base/tools/kong/manifests/kong-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-gateway
  namespace: kong
  annotations:
    konghq.com/gateway-unmanaged: "kong/kong-gateway-proxy"
spec:
  gatewayClassName: kong
  listeners:
    - name: proxy-tls
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: platform-tls
      allowedRoutes:
        namespaces:
          from: All
