base/tools/kong/manifests/catalogue-by-id-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalogue-by-id-httproute
  namespace: prod
  annotations:
    konghq.com/plugins: cors,jwt-auth,extract-jwt-sub,rate-limit-catalog,proxy-cache-product-by-id
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong
      sectionName: proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/products/
      backendRefs:
        - name: catalogue
          port: 4000
          kind: Service
