base/tools/kong/manifests/kong-ingress-apis.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-apis
  namespace: prod
  annotations:
    konghq.com/plugins: jwt-auth
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  tls:
    - secretName: front-prod-tls
  rules:
    - http:
        paths:
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 4000
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8000
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8082
