base/tools/kong/manifests/kong-ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-front
  namespace: prod
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  tls:
    - secretName: front-prod-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
