base/tools/kong/manifests/order-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-httproute
  namespace: prod
  annotations:
    konghq.com/plugins: jwt-auth,extract-jwt-sub,rate-limit-order
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong
      sectionName: proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/orders
      backendRefs:
        - name: order
          port: 8000
          kind: Service
