base/tools/kong/manifests/payment-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payment-httproute
  namespace: prod
  annotations:
    konghq.com/plugins: cors,jwt-auth,extract-jwt-sub,rate-limit-payment
    konghq.com/strip-path: "false"
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong
      sectionName: proxy
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/payments
      backendRefs:
        - name: payment
          port: 8082
          kind: Service
